apps/spoolman/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spoolman
  namespace: spoolman
  labels:
    app: spoolman
    dns.service-controller.io/enabled: "true"
    dns.service-controller.io/hostname: "spoolman.ganam.app"
    exposure.service-controller.io/type: "internal"
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
  selector:
    app: spoolman
